--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                <div class="header__days">March 30</div>
             </div>
             <div class="header__personal">
-               <img src="/img/avatar.png" alt="avatar">
+               <img src="img/avatar.png" alt="avatar">
             </div>
          </div>
       </header>
@@ -57,7 +57,7 @@
                   </div>
                   <div class="title__right">
                      <span>All movies</span>
-                     <img src="/img/arrow-black-right.svg" alt="trending-right">
+                     <img src="img/arrow-black-right.svg" alt="trending-right">
                   </div>
                </div>
                <div class="trending">
@@ -102,7 +102,7 @@
                   </div>
                   <div class="title__right">
                      <span>All movies</span>
-                     <img src="/img/arrow-black-right.svg" alt="trending-right">
+                     <img src="img/arrow-black-right.svg" alt="trending-right">
                   </div>
                </div>
                <div class="popular">
@@ -119,7 +119,7 @@
                         </div>
                         <div class="popular__rating">
                            <div class="popular__img">
-                              <img src="/img/Star.svg" alt="Stars">
+                              <img src="img/Star.svg" alt="Stars">
                            </div>
                            <span>4,7</span>
                         </div>
@@ -138,7 +138,7 @@
                         </div>
                         <div class="popular__rating">
                            <div class="popular_img">
-                              <img src="/img/Star.svg" alt="star">
+                              <img src="img/Star.svg" alt="star">
                            </div>
                            <span>4,7</span>
                         </div>
@@ -157,7 +157,7 @@
                         </div>
                         <div class="popular__rating">
                            <div class="popular_img">
-                              <img src="/img/Star.svg" alt="star">
+                              <img src="img/Star.svg" alt="star">
                            </div>
                            <span>4,7</span>
                         </div>
